syntax = "proto3";

package aggregator.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/aggregator";

import "creation/messages/creation.proto";
import "comment/messages/comment.proto";
import "common/user_default.proto";

// 用于主页 空间 等 的返回
message GetCreationList {
  repeated creation.messages.CreationInfo creation_info = 2;
  repeated comment.messages.CommentArea comment_area = 3;
  repeated common.UserDefault user_default = 4;
}